# Blui-Backend

./: .dockerignore  .env  Dockerfile  README.md  alembic.ini  create_db.py  docker-compose.yml  docker-start.sh  pyproject.toml  requirements.txt  run.py  start.bat  start.sh
alembic/: env.py
alembic/versions/: 001_initial.py  002_fix_transaction_columns.py
app/: main.py
app/api/v1/: api.py
app/api/v1/endpoints/: auth.py  categories.py  summary.py  transactions.py  user.py
app/core/: config.py  database.py  deps.py  security.py
app/models/: models.py
app/schemas/: schemas.py
app/services/: services.py
